--- a/package.json
+++ b/package.json
@@ -6,14 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/porteraproblems/ReadMeGenerator.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/porteraproblems/ReadMeGenerator/issues"
-  },
-  "homepage": "https://github.com/porteraproblems/ReadMeGenerator#readme"
+  "dependencies": {
+    "inquirer": "7.3.3"
+  }
 }
